5 warehouse tests left